Can upload image in django admin

--- a/editor_md/templates/editor.md.html
+++ b/editor_md/templates/editor.md.html
@@ -21,7 +21,7 @@
         dialogLockScreen: {{ dialogLockScreen |lower}},
         dialogMaskOpacity: {{ dialogMaskOpacity }},
         dialogMaskBgColor: "{{ dialogMaskBgColor }}",
-        imageUploadURL: "{{ imageUploadURL }}",
+        imageUploadURL: "{% url 'editor_upload_image' %}?path={{ imagepath }}",
         imageUpload: {{ imageUpload | lower}},
         imageFormats: {{ imageFormats |safe}},
         path: "{{ path }}",
